# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "arranger"
version = "0.1.0"
edition = "2021"


[dependencies]
dirs = "5.0"
regex = "1.9.3"
chrono = "0.4.26"

clap = { version = "4.3.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Console",
] }


[profile.release]
opt-level = 3
strip = true
codegen-units = 1