# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "arranger"
repository = "https://github.com/syn-chromatic/arranger-rs"
authors = ["Synchromatic <synchromatic.github@gmail.com>"]
version = "0.6.5"
edition = "2021"
license = "GPL-3.0"


[dependencies.dirs]
version = "5.0"


[dependencies.regex]
version = "1.9.3"


[dependencies.chrono]
version = "0.4.26"


[dependencies.term_size]
version = "0.3.2"


[dependencies.libc]
version = "0.2"


[dependencies.thread-manager]
version = "1.0.0"


[dependencies.clap]
version = "4.3.16"
features = ["derive"]


[dependencies.tokio]
version = "1"
features = ["full"]


[dependencies.serde]
version = "1.0.183"
features = ["derive"]


[dependencies.serde_json]
version = "1.0.104"


[dependencies.hyper]
version = "0.14"
features = ["full"]


[dependencies.hyper-tls]
version = "0.5"


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Console",
] }


[profile.release]
opt-level = 3
strip = true
